# parse

./: .gitignore  LICENSE  README.md  README.rst  justfile  parse.py  pyproject.toml
.github/workflows/: rebase.yml  rebase.yml.archive  test.yml
examples/: simple.py
