[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "parse_with_dot_access"
version = "1.18.0"
description = "a daily rebase of parse with dot access"
authors = ["Nutchanon Ninyawee <me@nutchanon.org>"]
license = "ISC"
readme = "README.md"
repository = "https://github.com/CircleOnCircles/parse"

[[project.authors]]
name = "Richard Jones"
email = "richard@python.org"

[[project.maintainers]]
name = "Nutchanon Ninyawee"
email = "me@nutchanon.org"

[project.urls]
homepage = "https://github.com/CircleOnCircles/parse"

[tool.setuptools]
py-modules = ["parse"]

[tool.setuptools.dynamic]
version = {attr = "parse.__version__"}

[tool.distutils.bdist_wheel]
universal = true
